--- a/webb.css
+++ b/webb.css
@@ -1,13 +1,47 @@
-.block{
-	background-color:	#F06901;
-	border-radius: 10px;
-	color:#FFFFFF;
-	padding: 20px;
+.wfont{
+  color:#FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+
+ width:40%;
+  border-radius: 5px;
+   
+}
+.card1{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+
+ margin-top: 80px;
+  border-radius: 5px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  padding: 2px 16px;
+
+ background: linear-gradient(to bottom, #F06901 50%, #FFFFFF 50%);
+}
+.container1{
+  padding: 2px 16px;
+  margin-bottom: 20px;
+      position: relative;
+    z-index: initial;
+    background-color: #ffff;
 
 }
-h3,h2,h1{
-	
-	margin-left: 25px;
+.head{
+  background-color: #F06901;
+
 }
 ul {
   list-style: none;
@@ -21,17 +55,13 @@ ul li::before {
   width: 1em;
   margin-left: -1em;
       font-size: 20px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 30%;
-  border-radius: 25px;
+    
+ 
 
 }
+
 .inner_card {
-	    border: 1px solid #DFDFDF;
+      border: 1px solid #DFDFDF;
   width: 90%;
   border-radius: 25px;
 
@@ -43,25 +73,10 @@ ul li::before {
   font-size: 10px;
     padding: 5px;
     margin-bottom: 15px;
-}
 
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-
-
-.container {
- padding: 2px 16px;
-    border: 1px solid #DFDFDF;
-    border-radius: 25px;
-    margin: 10px;
-    margin-top: -15px;
-    margin-bottom: 50px;
 }
 .bottom_block{
-	 border: 2px solid grey;
+   border: 2px solid grey;
   padding: 10px;
   border-radius: 25px;
  font-family: Arial, Helvetica, sans-serif;
